Add info in Productos.html and add product.scss

--- a/pages/about.html
+++ b/pages/about.html
@@ -64,10 +64,10 @@
         </ul>
         <ul class="menu">
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./productos.html">Productos</a></li>
-            <li><a href="./contact.html">Contacto</a></li>
-            <li><a href="./nosotros.html">Sobre Nosotros</a></li>
-            <li><a href="./reseñas.html">Reseñas</a></li>
+            <li><a href="./pages/productos.html">Productos</a></li>
+            <li><a href="./pages/contacto.html">Contacto</a></li>
+            <li><a href="./pages/about.html">Sobre Nosotros</a></li>
+            <li><a href="./pages/login.html">Logeo</a></li>
         </ul>
         <p>Rojo Pastel</p>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
