--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -120,9 +120,9 @@
         <ul class="menu">
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./pages/productos.html">Productos</a></li>
-            <li><a href="./pages/contact.html">Contacto</a></li>
-            <li><a href="./pages/nosotros.html">Sobre Nosotros</a></li>
-            <li><a href="./pages/reseñas.html">Reseñas</a></li>
+            <li><a href="./pages/contacto.html">Contacto</a></li>
+            <li><a href="./pages/about.html">Sobre Nosotros</a></li>
+            <li><a href="./pages/login.html">Logeo</a></li>
         </ul>
         <p>Rojo Pastel</p>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
