--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre la magia de la repostería en Rojo Pastel: recetas irresistibles y creatividad horneada con pasión. ¡Endulza tu día con nosotros! ">
+    <meta name="keywords" content="repostería, reposteria artesanal, postres, pasteles, dulce, postres gourmet, pasteles boda, pasteles cumpleaños, decoracion pasteles, eventos, mesas dulces">
     <title>Rojo Pastel</title>
     <link rel="stylesheet" href="./sass/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
@@ -103,9 +105,9 @@
             <ul class="menu">
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./pages/productos.html">Productos</a></li>
-                <li><a href="./pages/contact.html">Contacto</a></li>
-                <li><a href="./pages/nosotros.html">Sobre Nosotros</a></li>
-                <li><a href="./pages/reseñas.html">Reseñas</a></li>
+                <li><a href="./pages/contacto.html">Contacto</a></li>
+                <li><a href="./pages/about.html">Sobre Nosotros</a></li>
+                <li><a href="./pages/login.html">Logeo</a></li>
             </ul>
             <p>Rojo Pastel</p>
         </footer>
