--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reseñas</title>
+    <title>Login</title>
     <link rel="stylesheet" href="../sass/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -78,11 +78,11 @@
             <li><a href="#"></a><ion-icon name="logo-instagram"></ion-icon></a></li>
         </ul>
         <ul class="menu">
-            <li><a href="./index.html">Inicio</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li><a href="./pages/productos.html">Productos</a></li>
-            <li><a href="./pages/contact.html">Contacto</a></li>
-            <li><a href="./pages/nosotros.html">Sobre Nosotros</a></li>
-            <li><a href="./pages/reseñas.html">Reseñas</a></li>
+            <li><a href="./pages/contacto.html">Contacto</a></li>
+            <li><a href="./pages/about.html">Sobre Nosotros</a></li>
+            <li><a href="./pages/login.html">Logeo</a></li>
         </ul>
         <p>Rojo Pastel</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
